--- a/lab_1_np_pandas_matplotlib.ipynb
+++ b/lab_1_np_pandas_matplotlib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 209,
    "metadata": {
     "id": "AYaE7_JJ0FPF"
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 210,
    "metadata": {
     "id": "agysa3FoLG6G"
    },
@@ -69,10 +69,10 @@
       " [ 0.  1.  0. 16. 15. 14. 13.  0.  0.]\n",
       " [ 1.  0.  1. 17. 18. 19. 20.  0.  0.]\n",
       " [ 0.  1.  0. 24. 23. 22. 21.  0.  0.]\n",
-      " [ 6.  2.  9.  1.  0.  0.  0.  0.  0.]\n",
-      " [ 8.  2.  4.  0.  1.  0.  0.  0.  0.]\n",
-      " [ 7.  9.  2.  0.  0.  1.  0.  0.  0.]\n",
-      " [ 5.  9. 10.  0.  0.  0.  1.  0.  0.]]\n"
+      " [ 2.  5.  9.  1.  0.  0.  0.  0.  0.]\n",
+      " [ 9.  9.  3.  0.  1.  0.  0.  0.  0.]\n",
+      " [ 8.  2.  3.  0.  0.  1.  0.  0.  0.]\n",
+      " [ 3.  3.  6.  0.  0.  0.  1.  0.  0.]]\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 211,
    "metadata": {
     "id": "9iyCwtKeL4Sx"
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 212,
    "metadata": {
     "id": "fK9N52bVOQk3"
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 213,
    "metadata": {
     "id": "_xSlubGZSp-P"
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 214,
    "metadata": {
     "id": "c6f0bMWKSuo-"
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 215,
    "metadata": {
     "id": "c5UFVtX_Ff_d"
    },
@@ -259,12 +259,14 @@
    "source": [
     "def count_all_islands(a):\n",
     "    diff_arr = np.diff(a)\n",
-    "    return np.sum(diff_arr == 1)"
+    "    if(a[0] == 0):\n",
+    "        return np.sum(diff_arr == 1)\n",
+    "    return np.sum(diff_arr == 1) + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 216,
    "metadata": {
     "id": "OeiTXVnFFYSm"
    },
@@ -279,7 +281,6 @@
    ],
    "source": [
     "# можно подставить свой пример\n",
-    "\n",
     "a = np.array([0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 1, 1])\n",
     "\n",
     "# простая проверка для примера выше\n",
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 217,
    "metadata": {
     "id": "um-nH9VgGbeF"
    },
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 218,
    "metadata": {
     "id": "3VM2Q15zGiCL"
    },
@@ -331,7 +332,7 @@
        "       [-1,  3,  2,  2]])"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 219,
    "metadata": {
     "id": "iD0baTAxIil6"
    },
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 220,
    "metadata": {
     "id": "9cewBWIyIy7G"
    },
@@ -399,7 +400,7 @@
        "3"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 221,
    "metadata": {
     "id": "AIZjzQ7qHasl"
    },
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 222,
    "metadata": {
     "id": "mPc6GlqTHi4y"
    },
@@ -477,7 +478,7 @@
        "       [0, 1, 2, 3, 4, 4, 3, 2, 1, 0]])"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 223,
    "metadata": {
     "id": "_x1l9qofKBuT"
    },
@@ -516,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 224,
    "metadata": {
     "id": "1UHsPZG6KNjB"
    },
@@ -528,7 +529,7 @@
        "       [6.5, 7.5, 8.5]])"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 225,
    "metadata": {
     "id": "pvsySOXiLSll"
    },
@@ -575,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 226,
    "metadata": {
     "id": "j2nlX8gZLgu_"
    },
@@ -600,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 227,
    "metadata": {
     "id": "BsYOG1fCMVTp"
    },
@@ -614,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 228,
    "metadata": {
     "id": "tjXHwtl0Mgdt"
    },
@@ -626,7 +627,7 @@
        "       [2.23606798, 3.31662479, 6.164414  ]])"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 229,
    "metadata": {
     "id": "ZhGfEL9KtqZN"
    },
@@ -722,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 230,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -820,7 +821,7 @@
        "5  4     267             1        180.0       121.0      0.17"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 231,
    "metadata": {
     "id": "SidmSVzMyW_U"
    },
@@ -965,7 +966,7 @@
        "5  4  267        1  0.18    1.21  0.17"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 232,
    "metadata": {
     "id": "32p3uQkhHxu1"
    },
@@ -1149,7 +1150,7 @@
        "5    0.000002   2.13444   6.284484e-07    4.707479e-09  "
       ]
      },
-     "execution_count": 179,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 233,
    "metadata": {
     "id": "LfWPdeWkHxu1"
    },
@@ -1315,7 +1316,7 @@
        "0.614    2.978946e-08  "
       ]
      },
-     "execution_count": 180,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 234,
    "metadata": {
     "id": "eAoulUClHxu1"
    },
@@ -1431,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 235,
    "metadata": {
     "id": "E-t75UCcHxu3"
    },
@@ -1467,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 236,
    "metadata": {
     "id": "dLdKIUCRHxu3"
    },
@@ -1551,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 237,
    "metadata": {
     "id": "NESWENOWa7og"
    },
@@ -1562,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 238,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1660,7 +1661,7 @@
        "4   5            5.0           3.6            1.4           0.2  Iris-setosa"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1673,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 239,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1765,7 +1766,7 @@
        "4            5.0           3.6            1.4           0.2  Iris-setosa"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1789,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 240,
    "metadata": {
     "id": "ciikB8rDYmvE"
    },
@@ -1804,7 +1805,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1826,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 241,
    "metadata": {
     "id": "yC3bz9HHadj2"
    },
@@ -1874,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 242,
    "metadata": {
     "id": "n448lJCObP6J"
    },
@@ -1910,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 243,
    "metadata": {
     "id": "GFRnPtx1cV2D"
    },
@@ -1971,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 244,
    "metadata": {
     "id": "r3ZO1ll9dr9N"
    },
@@ -1998,7 +1999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 245,
    "metadata": {
     "id": "2hlonw5odtbL"
    },
@@ -2049,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 246,
    "metadata": {
     "id": "Inl3JIWKe9VU"
    },
@@ -2109,7 +2110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 247,
    "metadata": {
     "id": "nzziJ41Wfgfo"
    },
